<resources>
    <string name="app_name">Photo Editor</string>
    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>


    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Sign_in">Sign In</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="Sign_in_fb">Sign In With Facebook</string>
    <string name="forget_pw">Forget your Password?</string>
    <string name="connect">Connect</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="error_first_name">Please Enter First Name</string>
    <string name="error_last_name">Please Enter Last Name</string>
    <string name="error_email">Please Enter Email</string>
    <string name="error_password">Please Enter Password</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="email">email</string>
    <string name="passowrd">password</string>
</resources>
