<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fab_margin"
    android:background="@android:color/white"

    tools:context=".SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="@dimen/padding_10"
            android:hint="@string/hint_email"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="#E0E0E0" />

        <EditText
            android:id="@+id/et_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/padding_10"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="@dimen/padding_10"
            android:hint="@string/hint_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="#E0E0E0" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/padding_10"
            android:background="@drawable/bg_button"
            android:text="@string/Sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_fb_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/padding_10"
            android:background="@drawable/bg_fb_button"
            android:text="@string/Sign_in_fb"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tc_forget_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/forget_pw"
            android:textColor="#E0E0E0"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>