<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginTop="@dimen/fab_margin"
    tools:context=".SignUpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"

            >
            <EditText
                android:id="@+id/et_first_name_sign_up"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_10"
                android:layout_marginRight="@dimen/padding_10"
                android:background="@drawable/bg_edittext"
                android:drawablePadding="@dimen/padding_10"
                android:hint="@string/hint_first_name"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textColorHint="#E0E0E0" />

            <EditText
                android:id="@+id/et_last_name_sign_up"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_10"

                android:layout_marginRight="@dimen/padding_10"
                android:background="@drawable/bg_edittext"
                android:drawablePadding="@dimen/padding_10"
                android:hint="@string/hint_last_name"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textColorHint="#E0E0E0" />

        </LinearLayout>
        <EditText
            android:id="@+id/et_email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginRight="@dimen/padding_10"
            android:background="@drawable/bg_edittext"
            android:drawablePadding="@dimen/padding_10"
            android:hint="@string/hint_email"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/fab_margin"
            android:textColor="@color/colorAccent"
            android:textColorHint="#E0E0E0" />

        <EditText
            android:id="@+id/et_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/padding_10"
            android:background="@drawable/bg_edittext"
            android:drawablePadding="@dimen/padding_10"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textColorHint="#E0E0E0" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginRight="@dimen/padding_10"
            android:background="@drawable/bg_button"
            android:text="@string/connect"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />




    </LinearLayout>
</RelativeLayout>