<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_weight="3"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/dash"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_background"
        android:theme="@style/ToolbarStyle"
        >

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/dash_parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:weightSum="3"
        android:background="@drawable/header_gradient">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:transitionName="image"
            android:background="@drawable/hexagonal"
            android:src="@drawable/filter"


            />

        <TextView
            android:id="@+id/title_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:textSize="25sp"
            android:transitionName="text"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:text="@string/app_name"
            >
        </TextView>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".22"
        android:weightSum="2"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/Sign_in"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Sign_up"
            android:background="#E5E5E5"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_weight="1.7">


    </android.support.v4.view.ViewPager>



</LinearLayout>